fix: remove overflow-y scroll from wlo-container to avoid Windows from showing scrollbar permanently

--- a/src/app/wlo-search/template/template.component.scss
+++ b/src/app/wlo-search/template/template.component.scss
@@ -302,7 +302,6 @@ wlo-editable-text {
                     padding: 16px 24px;
                     height: 100%;
                     box-sizing: border-box;
-                    overflow-y: scroll;
 
                     h2,
                     h3 {
